--- a/src/main/resources/anniv5Resources/localization/rus/aggressionpack/Keywordstrings.json
+++ b/src/main/resources/anniv5Resources/localization/rus/aggressionpack/Keywordstrings.json
@@ -1,7 +1,12 @@
 [
   {
     "PROPER_NAME": "Агрессия",
-    "NAMES": ["агрессия", "агрессию", "агрессии"],
+    "NAMES": [
+      "агрессия",
+      "агрессию",
+      "агрессии",
+      "aggression"
+    ],
     "DESCRIPTION": "В этой #yСтойке ваши Атаки наносят на #b25% больше урона. Вы получаете #b2 #yСилы при выходе из этой #yСтойки."
   }
 ]
