--- a/src/main/resources/anniv5Resources/localization/rus/bardinspirepack/Cardstrings.json
+++ b/src/main/resources/anniv5Resources/localization/rus/bardinspirepack/Cardstrings.json
@@ -30,7 +30,7 @@
   },
   "${ModID}:Shifting": {
     "NAME": "Непостоянство",
-    "DESCRIPTION": "Наносит !D! урона или NL лаёт !B! Защиты. NL Наносит !D! урона или NL даёт !B! Защиты."
+    "DESCRIPTION": "Наносит !D! урона или NL даёт !B! Защиты. NL Наносит !D! урона или NL даёт !B! Защиты."
   },
   "${ModID}:ShiftingAttack": {
     "NAME": "Атака",
