--- a/src/main/resources/anniv5Resources/localization/rus/bardinspirepack/Keywordstrings.json
+++ b/src/main/resources/anniv5Resources/localization/rus/bardinspirepack/Keywordstrings.json
@@ -3,7 +3,8 @@
     "PROPER_NAME": "Вдохновение",
     "NAMES": [
       "вдохновение",
-      "вдохновения"
+      "вдохновения",
+      "inspiration"
     ],
     "DESCRIPTION": "Вдохновение повышает урон и #yЗащиту следующей разыгрываемой карты на указанный процент. #bЭффект #bсуммируется."
   }
