--- a/src/main/resources/anniv5Resources/localization/rus/creativitypack/Cardstrings.json
+++ b/src/main/resources/anniv5Resources/localization/rus/creativitypack/Cardstrings.json
@@ -1,7 +1,7 @@
 {
   "${ModID}:MakeshiftSword": {
     "NAME": "Кустарный меч",
-    "DESCRIPTION": "Даёт !M! Бодрости при создании карты в бою."
+    "DESCRIPTION": "Даёт !M! ${ModID}:Бодрости при создании карты в бою."
   },
   "${ModID}:MakeshiftShield": {
     "NAME": "Кустарный щит",
@@ -21,11 +21,11 @@
   },
   "${ModID}:Mimicry": {
     "NAME": "Мимикрия",
-    "DESCRIPTION": "{@@} ${ModID}:Найдите {!Upgrades!|>0= улучшенную}обычную карту из других выбранных Наборов."
+    "DESCRIPTION": "{@@} ${ModID}:Найдите {!Upgrades!|>0= улучшенную }обычную карту из других выбранных Наборов."
   },
   "${ModID}:CraftyMove": {
     "NAME": "Хитрый ход",
-    "DESCRIPTION": "Наносит !D! урона. Если в этом ходу была создана карта, то вы получаете [E] и берёте одну карту."
+    "DESCRIPTION": "Наносит !D! урона. NL Если в этом ходу была создана карта, то вы получаете [E] и берёте одну карту."
   },
   "${ModID}:BarrierBeacon": {
     "NAME": "Барьер света",
