--- a/src/main/resources/anniv5Resources/localization/rus/Relicstrings.json
+++ b/src/main/resources/anniv5Resources/localization/rus/Relicstrings.json
@@ -1,12 +1,12 @@
 {
   "${ModID}:BagOfHolding": {
-    "NAME": "Bag of Holding",
-    "FLAVOR": "\"Incredible! It appears that this bag connects to an extradimensional space. What if I jump inside?\" - Ranwid",
+    "NAME": "Сумка хранения",
+    "FLAVOR": "«Невероятно! Похоже, эта сумка соединена с потусторонним пространством! Что будет, если я запрыгну внутрь?» - Ранвид",
     "DESCRIPTIONS": [
-      "Replaces ",
-      ".[] NL Gain [E] at the start of each turn, lasting one turn for every #b5 cards in your deck.",
-      "Energy gained: {0}",
-      " NL Per turn: {0} NL Per combat: {1}"
+      "Заменяет «",
+      "».[] NL Даёт [E] в начале первых Х ходов за каждые #b5 карт в колоде.",
+      "Выдано энергии: {0}",
+      " NL За ход: {0} NL За бой: {1}"
     ]
   },
   "${ModID}:BanishingDecree": {
@@ -27,14 +27,14 @@
     ]
   },
   "${ModID}:CollectorBadge": {
-    "NAME": "Collector Badge",
-    "FLAVOR": "Gotta collect 'em all.",
+    "NAME": "Жетон коллекционера",
+    "FLAVOR": "Я соберу их всех!",
     "DESCRIPTIONS": [
-      "Each turn, after you play a card from #b4 different Packs, gain [E] [REMOVE_SPACE].",
-      " NL NL Packs used this turn: ",
-      " NL NL This has triggered this turn. ",
-      "Energy gained: {0}",
-      " NL Per turn: {0} NL Per combat: {1}"
+      "Даёт [E] при первом разыгрывании карт из #b4 разных Наборов в ходу.",
+      " NL NL В этом ходу вы разыграли карты из этих Наборов: ",
+      " NL NL Уже сработал в этом ходу. ",
+      "Выдано энергии: {0}",
+      " NL За ход: {0} NL За бой: {1}"
     ]
   },
   "${ModID}:GemOfUnity": {
@@ -49,10 +49,10 @@
     ]
   },
   "${ModID}:HandyHaversack": {
-    "NAME": "Handy Haversack",
-    "FLAVOR": "Helps heroic hoarders handle hindrances.",
+    "NAME": "Удобный ранец",
+    "FLAVOR": "В него влезает столько всяких разных чудо-штук!.",
     "DESCRIPTIONS": [
-      "At the start of each combat, gain [E] and draw #b1 card."
+      "Вы берёте #b1 карту и получаете [E] в начале боя."
     ]
   },
   "${ModID}:PMBoosterBox": {
