--- a/src/main/resources/anniv5Resources/localization/rus/Cardstrings.json
+++ b/src/main/resources/anniv5Resources/localization/rus/Cardstrings.json
@@ -9,7 +9,7 @@
   },
   "${ModID}:Rummage": {
     "NAME": "Порыться",
-    "DESCRIPTION": "{@@}Наносит !D! урона. NL Вы берёте !${ModID}:m2! карт{@@}{!${ModID}:m2!|@=у|>1=ы} и уменьшаете {@@}{!${ModID}:m2!|@=её|>1=их} стоимость на !M! до конца хода."
+    "DESCRIPTION": "{@@}Наносит !D! урона. NL Вы берёте !${ModID}:m2! карт{!${ModID}:m2!|@=|&1=у|&2,&3,&4=ы|&11,&12,&13,&14=} и уменьшаете {!${ModID}:m2!|@=её|>1=их} стоимость на !M! до конца хода."
   },
   "${ModID}:Cardistry": {
     "NAME": "Кардистр",
