--- a/src/main/resources/anniv5Resources/localization/rus/Charstrings.json
+++ b/src/main/resources/anniv5Resources/localization/rus/Charstrings.json
@@ -5,9 +5,9 @@
       "Наборов Умелец"
     ],
     "TEXT": [
-      "A traveler with an unending Pack of weapons and tools.",
-      "NL Who knows what the Pack will hold next?",
-      "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~amalgamated~ ~one,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
+      "Скиталец с неиссякаемым Набором оружий и инструментов.",
+      "NL Кто знает что будет в Наборе на следующий раз?",
+      "Пробираясь по тёмной улице, вы застаёте несколько таинственных фигур в процессе какого-то тёмного ритуала. Вы подходите ближе, и все они одновременно поворачиваются к вам. Самый высокий из них оголяет клыки и протягивает к вам длинную бледную руку. NL ~«Стань~ ~одним~ ~из~ ~нас,~ ~собранный,~ ~и~ ~ощути~ ~тепло~ ~Шпиля».~"
     ]
   }
 }
