--- a/src/main/resources/anniv5Resources/localization/rus/UIstrings.json
+++ b/src/main/resources/anniv5Resources/localization/rus/UIstrings.json
@@ -183,7 +183,7 @@
   "${ModID}:SingleCardReward": {
     "TEXT": [
       "[Карта] ",
-      "Примечание: нажмите ПКМ для детального вида карты!"
+      "Примечание: нажмите ПКМ для детального обзора карты!"
     ]
   },
   "${ModID}:PackSummaryDisplay": {
@@ -204,7 +204,7 @@
       "Orbs": "Сферы",
       "Stances": "Стойки",
       "Discard": "Сброс",
-      "Debuffs": "Негатив. эффекты",
+      "Debuffs": "Отриц. эффекты",
       "Attacks": "Атаки",
       "Tokens": "Спец. карты",
       "Powers": "Таланты"
